setup-kubernetes/manifests/kube/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`__KUBE_HOST__`)
      kind: Rule
      services:
        - name: headlamp
          port: 80
  tls:
    secretName: dashboard-tls
